--- a/DairyProject/templates/category/product_detail.html
+++ b/DairyProject/templates/category/product_detail.html
@@ -17,6 +17,10 @@
         <!-- Product Content -->
         <div class="col-md-9">
             <div class="container-xxl py-5">
+                <form action="{% url 'search_products' %}" method="GET" id="productSearchForm">
+                    <input type="text" name="query" id="searchQuery" placeholder="Search products...">
+                    <button type="submit">Search</button>
+                </form>
                 <div class="container">
                     <div class="row gx-4">
                         {% for product in products %}
