--- a/DairyProject/templates/dash/s_dashboard.html
+++ b/DairyProject/templates/dash/s_dashboard.html
@@ -132,9 +132,8 @@ body {
                     {% endif %}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                    <a class="dropdown-item" href="#">
-                        <i class="ti-settings text-primary"></i>
-                        Settings
+                    <a class="dropdown-item" href="{% url 'seller_password_change' %}" data-url="{% url 'seller_password_change' %}">
+                        <i class="fas fa-key"></i> Change Password
                     </a>
                     <a class="dropdown-item" href="{% url 'logout' %}">
                         <i class="ti-power-off text-primary"></i>
@@ -148,15 +147,17 @@ body {
 <!-- Rest of your HTML content -->
 
 <!-- Sidebar -->
+<!-- Sidebar -->
 <div>{{ seller_profile.first_name }}</div>
 <div class="sidebar">
     <div class="user-name"></div>
     <a href="{% url 'complete_s_profile' %}" data-url="{% url 'complete_s_profile' %}"><i class="fas fa-user-edit"></i> Edit Details</a>
     <a href="{% url 'seller_profile' %}" data-url="{% url 'seller_profile' %}"><i class="fas fa-user-edit"></i> Profile</a>
-    <a href="{% url 'milk_view' %}" data-url="{% url 'milk_view' %}"><i class="fas fa-key"></i> Todays Collection</a>
-    <a href="{% url 'prod_view' %}" data-url="{% url 'prod_view' %}"><i class="fas fa-chart-bar"></i> Product</a>
-    <a href="{% url 'view_cattle' %}" data-url="{% url 'view_cattle' %}"><i class="fas fa-chart-bar"></i>Cattle</a>
+    <a href="{% url 'own_milk_details' %}" data-url="{% url 'own_milk_details' %}"><i class="fas fa-hand-holding"></i> Todays Collection</a>
+    <a href="{% url 'prod_view' %}" data-url="{% url 'prod_view' %}"><i class="fas fa-shopping-cart"></i> Product</a>
+    <a href="{% url 'view_cattle' %}" data-url="{% url 'view_cattle' %}"><i class="fas fa-horse"></i> Cattle</a>
 </div>
+
 
 <!-- Main Content -->
 <div class="content">
