--- a/DairyProject/templates/other/team.html
+++ b/DairyProject/templates/other/team.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -21,24 +20,29 @@
     {% include 'inc/navbar.html' %}
     <div class="container-xxl py-5">
         <div class="container">
+            <form action="{% url 'search_sellers' %}" method="GET">
+                <input type="text" name="query" placeholder="Search sellers by name...">
+                <button type="submit">Search</button>
+            </form>
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="section-title bg-white text-center text-primary px-3">Team</p>
                 <h1 class="mb-5">Top Sellers</h1>
             </div>
             <div class="row g-1">
                 {% for seller in sellers %}
-                <div class="col-lg-2 col-md-4 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="team-item rounded p-1">
-                        {% if seller.profile_photo %}
-                            <img class="img-fluid rounded mb-4" src="{{ seller.profile_photo.url }}" height="200" width="200" alt="{{ seller.first_name }}">
-                        {% else %}
-                            <img class="img-fluid rounded mb-4" src="{% static 'images/default_profile.jpg' %}" alt="{{ seller.first_name }}">
-                            {% endif %}
-                        <h5>{{ seller.first_name }} {{ seller.last_name }}</h5>
-                        <p class="text-primary">Seller</p>
-                    </div>
-                </div>
-                {% endfor %}
+    <div class="col-lg-2 col-md-4 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="team-item rounded p-1">
+            {% if seller.profile_photo %}
+                <img class="img-fluid rounded mb-4" src="{{ seller.profile_photo.url }}" height="200" width="200" alt="{{ seller.first_name }}">
+            {% else %}
+                <img class="img-fluid rounded mb-4" src="{% static 'images/default_profile.jpg' %}" alt="{{ seller.first_name }}">
+            {% endif %}
+            <h5>{{ seller.first_name }} {{ seller.last_name }}</h5>
+            <p class="text-primary">Seller</p>
+        </div>
+    </div>
+{% endfor %}
+
             </div>
         </div>
     </div>
