--- a/DairyProject/templates/category/product_detail.html
+++ b/DairyProject/templates/category/product_detail.html
@@ -19,7 +19,7 @@
             <div class="container-xxl py-5">
                 <form action="{% url 'search_products' %}" method="GET" id="productSearchForm">
                     <input type="text" name="query" id="searchQuery" placeholder="Search products...">
-                    <button type="submit">Search</button>
+                    <button type="submit" id="'submit">Search</button>
                 </form>
                 <div class="container">
                     <div class="row gx-4">
