--- a/DairyProject/templates/dash/admindash.html
+++ b/DairyProject/templates/dash/admindash.html
@@ -11,8 +11,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-        }
-    
+        }    
         .container-fluid {
             display: flex;
         }
@@ -22,9 +21,7 @@
             height: 100vh;
             background-color: #f3f3f3;
         }
-    
-
-    
+       
         .sidebar .nav {
             list-style: none;
             padding: 0;
@@ -100,7 +97,7 @@
                         <a class="nav-link" href="{% url 'view_breed' %}" data-url="{% url 'view_breed' %}">Breed</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'message' %}" data-url="{% url 'message' %}">Message</a>
+                        <a class="nav-link" href="{% url 'message' %}" data-url="{% url 'message' %}">Request</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'all_milk_details' %}" data-url="{% url 'all_milk_details' %}">Milk</a>
