--- a/DairyProject/templates/contact.html
+++ b/DairyProject/templates/contact.html
@@ -40,27 +40,7 @@
     </div>
     <!-- Spinner End -->
 
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark px-0">
-        <div class="row g-0 d-none d-lg-flex">
-            <div class="col-lg-6 ps-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center text-light">
-                    <span>Follow Us:</span>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-6 text-end">
-                <div class="h-100 bg-secondary d-inline-flex align-items-center text-dark py-2 px-4">
-                    <span class="me-2 fw-semi-bold"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span>+012 345 6789</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->  
+ 
     
     <!-- Contact Start -->
     <div class="container-xxl py-5">
@@ -74,7 +54,21 @@
                     <h3 class="mb-4"> Need Help ?</h3>
                     <p class="mb-4">
                         <form id="contactForm" method="post" action="{% url 'contact' %}">
-                            {% csrf_token %}                        
+                            {% csrf_token %}  
+                            <div class="row g-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
+                                        <label for="name">Your Name</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
+                                        <label for= "email">Your Email</label>
+                                    </div>
+                                </div>
+
                             <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
@@ -132,13 +126,9 @@
                         </div>
                         <div class="ms-3">
                             <h6>Mail Us</h6>
-                            <span>dairysync@gmail.com</span>
+                            <span>dairysyncsociety@gmail.com</span>
                         </div>
                     </div>
-
-                    <iframe class="w-100 rounded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
                 </div>
             </div>
         </div>
@@ -146,14 +136,13 @@
     <!-- Contact End -->
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kerala</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+919654678760</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>dairysyncsociety@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -185,7 +174,6 @@
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid bg-secondary text-body copyright py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
@@ -196,8 +184,6 @@
                     Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
                 </div>
             </div>
-        </div>
-    </div>
     <!-- Copyright End -->
 
     <!-- Back to Top -->
@@ -219,7 +205,7 @@
         $(document).ready(function() {
             $('#contactForm').submit(function(e) {
                 e.preventDefault();
-            
+                
                 $.ajax({
                     type: 'POST',
                     url: $(this).attr('action'),
@@ -231,15 +217,18 @@
                         } else {
                             alert('Error: Please check your inputs.');
                             console.log(response.errors);
+                            // Handle form errors here if needed
                         }
                     },
                     error: function(xhr, errmsg, err) {
                         alert('Error: Failed to send message.');
                         console.log(xhr.status + ": " + xhr.responseText);
+                        // Handle other errors here if needed
                     }
                 });
             });
         });
+        
         </script>
 </body>
 
