--- a/DairyProject/templates/admin/all_milk_details.html
+++ b/DairyProject/templates/admin/all_milk_details.html
@@ -20,10 +20,10 @@
           {% for milk_detail in all_milk_details %}
           <tr>
               <td>{{ milk_detail.seller }}</td>
-              <td>{{ milk_detail.cattle }}</td>
+              <td>{{ milk_detail.milk_type }}</td>
               <td>{{ milk_detail.collection_date }}</td>
               <td>{{ milk_detail.quantity }}</td>
-              <td>{{ milk_detail.density_level }}</td>
+              <td>{{ milk_detail.quality_test_report }}</td>
               <td>{{ milk_detail.price }}</td>
               <td>{{ milk_detail.description }}</td>
               <td>
